--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Custom Browser Color End -->
+    <link rel="stylesheet" href="https://unpkg.com/phosphor-icons@1.4.2/src/css/ph.min.css">
+
   </head>
 
   <body>
