--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Custom Browser Color End -->
     <link rel="stylesheet" href="https://unpkg.com/phosphor-icons@1.4.2/src/css/ph.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.1/src/css/icons.css" />
+
 
   </head>
 
