--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <title>Bala Zeke</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
+    <meta name="description" content="Show yourself brightly with Bala - unique and creative portfolio and resume template!">
     <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
     <meta name="author" content="mix_design">
 
@@ -26,8 +26,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Braxton - Personal Portfolio & Resume HTML Template">
-    <meta property="og:description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
+    <meta property="og:title" content="Bala - Personal Portfolio & Resume HTML Template">
+    <meta property="og:description" content="Show yourself brightly with Bala - unique and creative portfolio and resume template!">
     <meta property="og:url" content="https://mixdesign.dev/themeforest/braxton">
     <meta property="og:image" content="https://mixdesign.dev/themeforest/braxton/img/favicon/og-image.jpg">
     <!-- Facebook Metadata End -->
