--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <!-- Meta Tags -->
     <meta name="description" content="Show yourself brightly with Bala - unique and creative portfolio and resume template!">
     <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
-    <meta name="author" content="mix_design">
+    <meta name="author" content="Bala Saravanan K">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
