--- a/app/index.html
+++ b/app/index.html
@@ -161,14 +161,14 @@
             </div>
           </div>
           <div class="avatar__image">
-            <img src="https://dummyimage.com/1024x1024/4d4d4d/636363" alt="Braxton - Personal Portfolio & Resume HTML Template Avatar">
+            <img src="img/avatars/face.png" alt="Bala - Personal Portfolio & Resume HTML Template Avatar">
           </div>
         </div>
         <!-- data caption #1 -->
         <div class="avatar__block">
           <h6>
             <small class="top">Specialization:</small>
-            UI/UX designer<br>& frontend developer
+            Graphic designer<br>& frontend developer
           </h6>
         </div>
         <!-- data caption #2 -->
@@ -492,7 +492,7 @@
                       <p class="small cards__text animate-in-up">Crafting designs for web and print that capture attention and elevate brands.</p>
                     </div>
                     <div class="cards__image d-flex animate-in-up">
-                      <img src="https://dummyimage.com/1200x900/4d4d4d/636363" alt="Service/Feature Image">
+                      <img src="img/services/5.png" alt="Service/Feature Image">
                     </div>
                   </div>
                 </div>
@@ -508,7 +508,7 @@
                       <p class="small cards__text animate-in-up">Designing interfaces with intuitive navigation and interaction across devices.</p>
                     </div>
                     <div class="cards__image d-flex animate-in-up">
-                      <img src="https://dummyimage.com/1200x900/4d4d4d/636363" alt="Service/Feature Image">
+                      <img src="img/services/6.png" alt="Service/Feature Image">
                     </div>
                   </div>
                 </div>
@@ -524,7 +524,7 @@
                       <p class="small cards__text animate-in-up">Creating scroll-stopping visuals that boost engagement and reflect on social media.</p>
                     </div>
                     <div class="cards__image d-flex">
-                      <img src="https://dummyimage.com/1200x900/4d4d4d/636363" alt="Service/Feature Image">
+                      <img src="img/services//7.png" alt="Service/Feature Image">
                     </div>
                   </div>
                 </div>
@@ -540,7 +540,7 @@
                       <p class="small cards__text animate-in-up">Building ML models to automate, streamline, and enhance user experience.</p>
                     </div>
                     <div class="cards__image d-flex animate-in-up">
-                      <img src="https://dummyimage.com/1200x900/4d4d4d/636363" alt="Service/Feature Image">
+                      <img src="img/services/8.png" alt="Service/Feature Image">
                     </div>
                   </div>
                 </div>
@@ -810,7 +810,7 @@
                           <img src="https://dummyimage.com/400x400/4d4d4d/636363" alt="Review Author">
                         </div>
                         <div class="tauthor__info d-flex flex-column justify-content-center">
-                          <p class="tauthor__name">Alex Tomato</p>
+                          <p class="tauthor__name">Krish</p>
                           <p class="tauthor__position">Brand Manager in 
                             <a href="#0" class="text-link-bold" target="_blank">Instant Design</a>
                           </p>
@@ -824,8 +824,8 @@
                         </div>
                       </div>
                       <div class="testimonials-card__descr animate-in-up">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut 
-                          laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud. Dolore magna aliquam.</p>
+                        <p>The uniqueness and brilliance of Bala's designs were beyond impressive. 
+                          His swift response and ability to understand requirements with minimal details showcased his remarkable talent.</p>
                       </div>
                       <div class="testimonials-card__btnholder animate-in-up">
                         <a class="btn mobile-vertical btn-line btn-transparent slide-right" href="#0">
@@ -842,9 +842,9 @@
                           <img src="https://dummyimage.com/400x400/4d4d4d/636363" alt="Review Author">
                         </div>
                         <div class="tauthor__info d-flex flex-column justify-content-center">
-                          <p class="tauthor__name">Jenny Pineapple</p>
-                          <p class="tauthor__position">SEO in 
-                            <a href="#0" class="text-link-bold" target="_blank">Creative People</a>
+                          <p class="tauthor__name">Jaiyantan</p>
+                          <p class="tauthor__position">CEO in 
+                            <a href="#0" class="text-link-bold" target="_blank">Brand Designer</a>
                           </p>
                           <div class="tauthor__rating d-flex">
                             <i class="ph-fill ph-star"></i>
@@ -856,8 +856,8 @@
                         </div>
                       </div>
                       <div class="testimonials-card__descr animate-in-up">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut 
-                          laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud. Dolore magna aliquam.</p>
+                        <p>Bala's designs were extremely excellent and they were really unique and creative.
+                          His timely approach and extraordinary output even with the most minimal context was really impressive.</p>
                       </div>
                       <div class="testimonials-card__btnholder animate-in-up">
                         <a class="btn mobile-vertical btn-line btn-transparent slide-right" href="#0">
@@ -963,8 +963,22 @@
               <!-- socials item -->
               <div class="socials-cards__item d-flex grid-item-s animate-card-5">
                 <div class="socials-cards__card">
-                  <i class="ph-bold ph-dribbble-logo"></i>
-                  <a class="socials-cards__link" href="https://dribbble.com/" target="_blank"></a>
+                  <i class="ph-bold ph-instagram-logo"></i>
+                  <a class="socials-cards__link" href="https://www.instagram.com/bala.zeke" target="_blank"></a>
+                </div>
+              </div>
+              <!-- socials item -->
+              <div class="socials-cards__item d-flex grid-item-s animate-card-5">
+                <div class="socials-cards__card">
+                  <i class="ph-bold ph-whatsapp-logo"></i>
+                  <a class="socials-cards__link" href="https://api.whatsapp.com/send?phone=918939522394" target="_blank"></a>
+                </div>
+              </div>
+              <!-- socials item -->
+              <div class="socials-cards__item d-flex grid-item-s animate-card-5">
+                <div class="socials-cards__card">
+                  <i class="ph-bold ph-pinterest-logo"></i>
+                  <a class="socials-cards__link" href="https://pin.it/BxUErkGZF" target="_blank"></a>
                 </div>
               </div>
               <!-- socials item -->
@@ -977,22 +991,8 @@
               <!-- socials item -->
               <div class="socials-cards__item d-flex grid-item-s animate-card-5">
                 <div class="socials-cards__card">
-                  <i class="ph-bold ph-instagram-logo"></i>
-                  <a class="socials-cards__link" href="https://www.instagram.com/" target="_blank"></a>
-                </div>
-              </div>
-              <!-- socials item -->
-              <div class="socials-cards__item d-flex grid-item-s animate-card-5">
-                <div class="socials-cards__card">
-                  <i class="ph-bold ph-twitch-logo"></i>
-                  <a class="socials-cards__link" href="https://www.twitch.tv/" target="_blank"></a>
-                </div>
-              </div>
-              <!-- socials item -->
-              <div class="socials-cards__item d-flex grid-item-s animate-card-5">
-                <div class="socials-cards__card">
-                  <i class="ph-bold ph-pinterest-logo"></i>
-                  <a class="socials-cards__link" href="https://www.pinterest.com/" target="_blank"></a>
+                  <i class="ph-bold ph-dribbble-logo"></i>
+                  <a class="socials-cards__link" href="https://dribbble.com/" target="_blank"></a>
                 </div>
               </div>
             </div>
