--- a/app/index.html
+++ b/app/index.html
@@ -183,19 +183,19 @@
           <div class="avatar__socials">
             <ul class="socials-square d-flex justify-content-between">
               <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://dribbble.com/" target="_blank"><i class="ph-bold ph-dribbble-logo"></i></a>
+                <a class="socials-square__link btn" href="https://www.instagram.com/bala.zeke" target="_blank"><i class="ph-bold ph-instagram-logo"></i></a>
+              </li>
+              <li class="socials-square__item">
+                <a class="socials-square__link btn" href="https://api.whatsapp.com/send?phone=918939522394" target="_blank"><i class="ph-bold ph-whatsapp-logo"></i></a>
+              </li>
+              <li class="socials-square__item">
+                <a class="socials-square__link btn" href="https://pin.it/BxUErkGZF" target="_blank"><i class="ph-bold ph-pinterest-logo"></i></a>
               </li>
               <li class="socials-square__item">
                 <a class="socials-square__link btn" href="https://www.behance.net/" target="_blank"><i class="ph-bold ph-behance-logo"></i></a>
               </li>
               <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://www.instagram.com/" target="_blank"><i class="ph-bold ph-instagram-logo"></i></a>
-              </li>
-              <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://www.twitch.tv/" target="_blank"><i class="ph-bold ph-twitch-logo"></i></a>
-              </li>
-              <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://www.pinterest.com/" target="_blank"><i class="ph-bold ph-pinterest-logo"></i></a>
+                <a class="socials-square__link btn" href="https://dribbble.com/" target="_blank"><i class="ph-bold ph-dribbble-logo"></i></a>
               </li>
             </ul>
           </div>
